{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 457,
  "lineage": "23aae2db-2208-b245-478e-0e2dbb422ef1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267122473:internet-gateway/igw-0499b331733bda7d7",
            "id": "igw-0499b331733bda7d7",
            "owner_id": "533267122473",
            "tags": {
              "Name": "my_project-igw"
            },
            "tags_all": {
              "Name": "my_project-igw"
            },
            "vpc_id": "vpc-023edf0bb4de3bd93"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:533267122473:loadbalancer/app/tf-lb-2024062913431698290000000e/947f5dd73db9e84a",
            "arn_suffix": "app/tf-lb-2024062913431698290000000e/947f5dd73db9e84a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-2024062913431698290000000e-1670674868.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:533267122473:loadbalancer/app/tf-lb-2024062913431698290000000e/947f5dd73db9e84a",
            "idle_timeout": 1000,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-2024062913431698290000000e",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c8fe6c84a93fad2b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06eb48c5a2748da0e"
              },
              {
                "subnet_id": "subnet-09be7f83a3828c722"
              }
            ],
            "subnets": [
              "subnet-06eb48c5a2748da0e",
              "subnet-09be7f83a3828c722"
            ],
            "tags": {
              "Name": "my_project-elb"
            },
            "tags_all": {
              "Name": "my_project-elb"
            },
            "vpc_id": "vpc-023edf0bb4de3bd93",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:533267122473:targetgroup/tf-20240629134619883600000011/6b920b33bfa00c24",
            "arn_suffix": "targetgroup/tf-20240629134619883600000011/6b920b33bfa00c24",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:533267122473:targetgroup/tf-20240629134619883600000011/6b920b33bfa00c24",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:533267122473:loadbalancer/app/tf-lb-2024062913431698290000000e/947f5dd73db9e84a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240629134619883600000011",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my_project-ecs-target-group"
            },
            "tags_all": {
              "Name": "my_project-ecs-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-023edf0bb4de3bd93"
          },
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267122473:security-group/sg-0c8fe6c84a93fad2b",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from ECS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8fe6c84a93fad2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http inbound traffic from internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "alb_security_group",
            "name_prefix": "",
            "owner_id": "533267122473",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023edf0bb4de3bd93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267122473:security-group/sg-02df1eab67eedb1e6",
            "description": "ECS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from ECS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02df1eab67eedb1e6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0c8fe6c84a93fad2b"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-security-group",
            "name_prefix": "",
            "owner_id": "533267122473",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023edf0bb4de3bd93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267122473:subnet/subnet-05e2d9adf5588fd2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.99.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e2d9adf5588fd2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267122473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_project-private-subnet-1"
            },
            "tags_all": {
              "Name": "my_project-private-subnet-1"
            },
            "vpc_id": "vpc-023edf0bb4de3bd93"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267122473:subnet/subnet-02b866117aec481dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.99.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b866117aec481dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267122473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_project-private-subnet-2"
            },
            "tags_all": {
              "Name": "my_project-private-subnet-2"
            },
            "vpc_id": "vpc-023edf0bb4de3bd93"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267122473:subnet/subnet-06eb48c5a2748da0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.99.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06eb48c5a2748da0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267122473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_project-public-subnet-1"
            },
            "tags_all": {
              "Name": "my_project-public-subnet-1"
            },
            "vpc_id": "vpc-023edf0bb4de3bd93"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267122473:subnet/subnet-09be7f83a3828c722",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.99.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09be7f83a3828c722",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267122473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_project-public-subnet-2"
            },
            "tags_all": {
              "Name": "my_project-public-subnet-2"
            },
            "vpc_id": "vpc-023edf0bb4de3bd93"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267122473:vpc/vpc-023edf0bb4de3bd93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.99.0.0/18",
            "default_network_acl_id": "acl-0b77859ff32e417de",
            "default_route_table_id": "rtb-0fa5834c5bf50760b",
            "default_security_group_id": "sg-014c3a18a18b969a7",
            "dhcp_options_id": "dopt-0d705b03493d0f9dd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023edf0bb4de3bd93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa5834c5bf50760b",
            "owner_id": "533267122473",
            "tags": {
              "Name": "my_project-vpc"
            },
            "tags_all": {
              "Name": "my_project-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}